--- a/app/views/profiles/_form.html.haml
+++ b/app/views/profiles/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @profile do |f|
+= form_for @profile, url: update_user_profile_path(@user), html: { method: :put } do |f|
   - if @profile.errors.any?
     #error_explanation
       %h2= "#{pluralize(@profile.errors.count, "error")} prohibited this profile from being saved:"
@@ -6,9 +6,9 @@
         - @profile.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :user
-    = f.text_field :user
+  / .field
+  /   = f.label :user
+  /   = f.text_field :user
   .field
     = f.label :bio
     = f.text_area :bio
