--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -2,7 +2,7 @@
 
 %p
   %b User:
-  = @profile.user
+  = @profile.user.full_name
 %p
   %b Bio:
   = @profile.bio
@@ -40,6 +40,4 @@
   %b Children:
   = @profile.children
 
-= link_to 'Edit', edit_profile_path(@profile)
-\|
-= link_to 'Back', profiles_path
+= link_to 'Edit', edit_user_profile_path(@user)
