--- a/app/views/messages/_form.html.haml
+++ b/app/views/messages/_form.html.haml
@@ -6,20 +6,12 @@
         - @message.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :sender_id
-    = f.number_field :sender_id
-  .field
-    = f.label :recipient_id
-    = f.number_field :recipient_id
+
   .field
     = f.label :title
     = f.text_field :title
   .field
     = f.label :body
     = f.text_area :body
-  .field
-    = f.label :read
-    = f.check_box :read
   .actions
-    = f.submit 'Save'
+    = f.submit 'Send'
