--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,14 +6,30 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
-    %nav
-      - if user_signed_in?
-        You are logged in as #{current_user.email}
-        \|
-        = link_to 'Log out', destroy_user_session_path, method: :delete
-      - else
-        = link_to 'Sign in', new_user_session_path
-        = link_to 'Sign up', new_user_registration_path
+    .navbar.navbar-default.navbar-static-top
+      .container
+        %button.navbar-toggle{"data-target" => ".navbar-responsive-collapse", "data-toggle" => "collapse", type: "button"}
+          %span.icon-bar
+          %span.icon-bar
+          %span.icon-bar
+        %a.navbar-brand{href: "#"} Techdate
+        .navbar-collapse.collapse.navbar-responsive-collapse
+          %ul.nav.navbar-nav
+            %li= link_to "Search"
+            %li= link_to "My profile" 
+            %li= link_to "Saved profiles" 
+            %li= link_to "Feed"
+            %li= link_to "Messages"
+
+    - if user_signed_in?
+      You are logged in as #{current_user.email}
+      \|
+      = link_to 'Log out', destroy_user_session_path, method: :delete
+    - else
+      = link_to 'Sign in', new_user_session_path
+      = link_to 'Sign up', new_user_registration_path
+
     - flash.each do |name, msg|
       = content_tag :div, msg, :id => "flash_#{name}"
+
     = yield
