--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -20,7 +20,7 @@
       %td= link_to message.title, message
       %td= message.body
       %td= message.read
-      %td= link_to 'Destroy', message, :method => :delete, :data => { :confirm => 'Are you sure?' }
+      %td= link_to 'Delete', message, :method => :put
 
 %br
 
