--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -41,3 +41,4 @@
   = @profile.children
 
 = link_to 'Edit', edit_user_profile_path(@user)
+= link_to 'Send a message', new_user_message_path(@user)
