--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,4 +1,8 @@
 %h1 Users
-%ul
-  - @users.each do |u|
-    %li #{u.full_name}
+.user-index
+  %ul
+    - @users.each do |u|
+      %li
+        = link_to image_tag(u.image.index.url), show_user_profile_path(u)
+        %br
+        #{link_to u.full_name, show_user_profile_path(u)} (#{u.profile.age} y.o.)
