--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,15 +12,15 @@
           %span.icon-bar
           %span.icon-bar
           %span.icon-bar
-        %a.navbar-brand{href: "#"} Techdate
+        %a.navbar-brand{href: root_path} Techdate
         -if user_signed_in?
           .navbar-collapse.collapse.navbar-responsive-collapse
             %ul.nav.navbar-nav
-              %li= link_to "Search", "", :id => "search_form_link"
-              %li= link_to "My profile" 
+              %li= link_to "Search", root_path(search: true) , :id => "search_form_link"
+              %li= link_to "My profile", show_user_profile_path(current_user) 
               %li= link_to "Saved profiles" 
               %li= link_to "Feed"
-              %li= link_to "Messages"
+              %li= link_to "Messages", mailbox_type_messages_path("inbox")
 
     - if user_signed_in?
       You are logged in as #{current_user.email}
