--- a/app/views/profiles/_form.html.haml
+++ b/app/views/profiles/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @profile, url: update_user_profile_path(@user), html: { method: :put } do |f|
+= form_for @profile, url: update_current_user_profile_path, html: { method: :put } do |f|
   - if @profile.errors.any?
     #error_explanation
       %h2= "#{pluralize(@profile.errors.count, "error")} prohibited this profile from being saved:"
