--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,33 +7,19 @@
     = csrf_meta_tags
     = favicon_link_tag 'techdate_favicon.ico'
   %body
-    .navbar.navbar-default.navbar-static-top
-      .container
-        %button.navbar-toggle{"data-target" => ".navbar-responsive-collapse", "data-toggle" => "collapse", type: "button"}
-          %span.icon-bar
-          %span.icon-bar
-          %span.icon-bar
-        %a.navbar-brand{href: root_path} Techdate
-        -if user_signed_in?
-          .navbar-collapse.collapse.navbar-responsive-collapse
-            %ul.nav.navbar-nav
-              %li= link_to "Search", root_path(search: true) , :id => "search_form_link"
-              %li= link_to "My profile", show_user_profile_path(current_user) 
-              %li= link_to "Saved profiles" 
-              %li= link_to "Views"
-              %li= link_to "Messages", mailbox_type_messages_path("inbox")
-
+    / # if params[:action]
+    / # = render partial: "navbar" if my_helper_says_true
     - if user_signed_in?
+      = render 'layouts/navbar'
       You are logged in as #{current_user.email}
       \|
       = link_to 'Log out', destroy_user_session_path, method: :delete
-    - else
-      = link_to 'Sign in', new_user_session_path
-      = link_to 'Sign up', new_user_registration_path
 
     - flash.each do |name, msg|
       = content_tag :div, msg, :id => "flash_#{name}"
 
-    = render 'layouts/search'
-
-    = yield
+    .container
+      = render 'layouts/search'
+      .row
+        .col-md-12
+          = yield
