--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -7,7 +7,7 @@
     %a.navbar-brand{href: root_path} Techdate
     -if user_signed_in?
       .navbar-collapse.collapse.navbar-responsive-collapse
-        %ul.nav.navbar-nav
+        %ul.nav.navbar-nav.navbar-right
           %li= link_to "Search", root_path(search: true) , :id => "search_form_link"
           %li= link_to "My profile", show_current_user_profile_path
           %li= link_to "Saved profiles" 
