--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,9 +11,10 @@
     / # = render partial: "navbar" if my_helper_says_true
     - if user_signed_in?
       = render 'layouts/navbar'
-      You are logged in as #{current_user.email}
-      \|
-      = link_to 'Log out', destroy_user_session_path, method: :delete
+      .container.login_message
+        You are logged in as #{current_user.email}
+        \|
+        = link_to 'Sign out', destroy_user_session_path, method: :delete
 
     - flash.each do |name, msg|
       = content_tag :div, msg, :id => "flash_#{name}"
