--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -12,4 +12,4 @@
           %li= link_to "My profile", show_current_user_profile_path
           %li= link_to "Saved profiles" 
           %li= link_to "Views", current_user_profile_views_path
-          %li= link_to "Messages", mailbox_type_messages_path("inbox")
+          %li= link_to "Messages", mailbox_type_messages_path("inbox"), id: "navbar-messages-link"
