--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -14,11 +14,11 @@
   %b Age:
   = @profile.age
 %p
+  %b Interested In:
+  = @profile.interested_in_gender
+%p
   %b Gender:
   = @profile.gender
-%p
-  %b Interested in:
-  = @profile.interested_in
 %p
   %b City:
   = @profile.city
