--- a/app/views/messages/new.html.haml
+++ b/app/views/messages/new.html.haml
@@ -1,5 +1,5 @@
-%h1 New message
+%h3.move-heading-left 
+  New message to
+  = User.find(@user).full_name
 
 = render 'form'
-
-= link_to 'Back', messages_path
