--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -2,47 +2,67 @@
 
 - if @profile.user == current_user
   = link_to "View Counts", current_user_profile_views_path
+.row
+  / .col-md-1
+  .col-md-4
+    .photo-sizing-profile
+      = image_tag(@profile.user.image.url, class: "userpic")
+  .col-md-7
+    .row
+      .col-md-10
+        %h3.remove-top-margin
+          = @profile.user.full_name
+      .col-md-1
+        - if @profile.user == current_user
+          = button_to("Edit Profile", edit_current_user_profile_path, :class => "btn btn-default")
+        - else
+          = button_to("Message me", new_user_message_path(@user), :class => "btn btn-default", :method => :get)
+    .row
+      %b Location:
+      = @profile.city
+    .row.top-buffer
+      %b Age:
+      = @profile.age
+    .row.top-buffer.bio-text
+      %b Bio:
+      = @profile.bio
+.row.top-buffer
+  / .col-md-1
+  .col-md-12
+    .row
+      .col-md-4
+        %b Gender:
+        = @profile.gender
+      .col-md-7.right-profile-box
+        %b Current job:
+        = @profile.current_occupation
+    .row.top-buffer
+      .col-md-4
+        %b Interested in:
+        = @profile.interested_in_gender
+        aged 
+        = @profile.interested_in_age_start
+        to 
+        = @profile.interested_in_age_end
+      .col-md-7.right-profile-box
+        %b Machine languages:
+        = @profile.programming_languages
+    .row.top-buffer
+      .col-md-4
+        %b Relationship status:
+        = @profile.relationship_status
+      .col-md-7.right-profile-box
+        %b Human languages:
+        = @profile.native_human_language
+        (native)
+        = @profile.other_human_languages
+    .row.top-buffer
+      .col-md-4
+        %b Number of children: 
+        = @profile.children
+      .col-md-7.right-profile-box
+        %b Interests:
+        = @profile.interests
 
-= image_tag(@profile.user.image.url)
-%p
-  %b User:
-  = @profile.user.full_name
-%p
-  %b Bio:
-  = @profile.bio
-%p
-  %b Age:
-  = @profile.age
-%p
-  %b Interested In:
-  = @profile.interested_in_gender
-%p
-  %b Gender:
-  = @profile.gender
-%p
-  %b City:
-  = @profile.city
-%p
-  %b Current occupation:
-  = @profile.current_occupation
-%p
-  %b Programming languages:
-  = @profile.programming_languages
-%p
-  %b Native human language:
-  = @profile.native_human_language
-%p
-  %b Other human languages:
-  = @profile.other_human_languages
-%p
-  %b Interests:
-  = @profile.interests
-%p
-  %b Relationship status:
-  = @profile.relationship_status
-%p
-  %b Children:
-  = @profile.children
-
-= link_to 'Edit', edit_current_user_profile_path
-= link_to 'Send a message', new_user_message_path(@user)
+/ = link_to 'Edit', edit_current_user_profile_path
+/ = link_to 'Send a message', new_user_message_path(@user)
