Added read and unread message styling

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -72,3 +72,10 @@
 .move-heading-left {
   margin-left: -15px
 }
+
+// Message styling
+
+.message-row {
+  font-weight: bold;
+  background-color: rgba(255, 178, 115, 0.4);
+}
