added a reply button to messages show

--- a/app/views/messages/_form.html.haml
+++ b/app/views/messages/_form.html.haml
@@ -20,10 +20,10 @@
         = @user.profile.age
     .col-md-8
       .form-group
-        = f.label :title
+        = f.label :title, "Subject"
         = f.text_field :title, :class => "form-control"
       .form-group
-        = f.label :body
+        = f.label :body, "Message"
         = f.text_area :body, :class => "form-control", :rows => 9
       .actions
         = f.submit 'Send', :class => "btn btn-default"
