--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -14,7 +14,7 @@
           = @profile.user.full_name
       .col-md-1
         - if can? :update, @profile
-          = button_to("Edit Profile", edit_current_user_profile_path, :class => "btn btn-default")
+          = button_to("Edit Profile", edit_current_user_profile_path, :class => "btn btn-default", :method => :get)
         - elsif can? :create, Message
           = button_to("Message me", new_user_message_path(@user), :class => "btn btn-default", :method => :get)
     .row
