--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -10,6 +10,6 @@
         %ul.nav.navbar-nav.navbar-right
           %li= link_to "Search", root_path(search: true) , :id => "search_form_link"
           %li= link_to "My profile", show_current_user_profile_path
-          %li= link_to "Saved profiles" 
+          %li= link_to "Saved profiles", saved_profiles_path 
           %li= link_to "Views", current_user_profile_views_path, id:"navbar-views-link"
           %li= link_to "Messages", mailbox_type_messages_path("inbox"), id: "navbar-messages-link"
