Added logic and style to the message and view notification counter

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -83,3 +83,9 @@
 .message-box {
   height: 175px;
 }
+
+// For navbar (to make the notification counts of messages and views more noticeable)
+.new-counts {
+  padding-left: 2px;
+  color: white;
+}
