--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -14,7 +14,7 @@
       .col-md-1
         - if can? :update, @profile
           = button_to("Edit Profile", edit_current_user_profile_path, :class => "btn btn-default", :method => :get)
-        - elsif can? :create, Message
+        - if can? :create, Message
           = button_to("Message me", new_user_message_path(@user), :class => "btn btn-default", :method => :get)
         - if current_user != @profile.user && current_user.saved_profiles.where(profile_id: @profile.id).length == 0
           = button_to("Save this profile", user_saved_profiles_path(@user), :class => "btn btn-default", :method => :post)
