--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,4 +1,4 @@
-- if current_user.role == "basic_user"
+- if current_user.role == "basic_user" && @profile.user == current_user
   %h4 Looks like you haven't finished filling in your profile yet! Update your profile now to get premium access, view other users' profiles and send messages. Only #{pluralize @progress_remaining, "quick step"}  to go.
   .progress
     .progress-bar{"aria-valuemax" => "200", "aria-valuemin" => "0", "aria-valuenow" => "200" , role: "progressbar", style: "width: #{@progress_percent}%;"}
