--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -19,8 +19,9 @@
       .col-md-1
         - if can? :update, @profile
           = button_to("Edit Profile", edit_current_user_profile_path, :class => "btn btn-default", :method => :get)
-        - if can? :create, Message
-          = button_to("Message me", new_user_message_path(@user), :class => "btn btn-default", :method => :get)
+        - if current_user != @profile.user
+          - if can? :create, Message
+            = button_to("Message me", new_user_message_path(@user), :class => "btn btn-default", :method => :get)
         - if current_user != @profile.user && current_user.saved_profiles.where(profile_id: @profile.id).length == 0
           = button_to("Save this profile", user_saved_profiles_path(@user), :class => "btn btn-default", :method => :post)
     .row
@@ -45,7 +46,7 @@
     .row.top-buffer
       .col-md-4
         %b Interested in:
-        = @profile.interested_in_gender
+        = interested_in(@profile)
         aged 
         = @profile.interested_in_age_start
         to 
