--- a/app/views/layouts/home_layout.html.haml
+++ b/app/views/layouts/home_layout.html.haml
@@ -5,6 +5,7 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
     = favicon_link_tag 'techdate_favicon.ico'
+    = render partial: "layouts/js_current_user"
   %body
     .container
       .row
