Update image, have image placeholder, have different actions for cancan-raised error

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -16,9 +16,9 @@
     display: inline-block;
     list-style: none;
   }
-  // img{
-  //   width: 250px;
-  // }
+  img{
+    width: 250px;
+  }
 }
 
 // Centering the content on the page
