--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -26,6 +26,7 @@
   width: 90%;
   margin: auto;
   height: 100%;
+  margin-top: 15px;
 }
 
 .login_message {
@@ -110,4 +111,18 @@
 
 .long-search-row {
   margin-left: 0px;
+}
+
+// Notices
+
+.alert-notice {
+  @extend .alert-success;
+}
+
+.alert-alert {
+  @extend .alert-warning;
+}
+
+.alert-error {
+  @extend .alert-danger;
 }
