--- a/app/views/profiles/_form.html.haml
+++ b/app/views/profiles/_form.html.haml
@@ -1,6 +1,6 @@
 = form_for @profile, url: update_current_user_profile_path, html: { method: :put } do |f|
   - if @profile.errors.any?
-    #error_explanation
+    #error_explanation.alert-error
       %h2= "#{pluralize(@profile.errors.count, "error")} prohibited this profile from being saved:"
       %ul
         - @profile.errors.full_messages.each do |msg|
