--- a/app/views/saved_profiles/index.html.haml
+++ b/app/views/saved_profiles/index.html.haml
@@ -8,6 +8,7 @@
 
   - @saved_profiles.each do |s|
     %tr
+      -binding.pry
       %td= link_to image_tag(s.profile.user.image.thumb.url), show_user_profile_path(s.profile.user)
       %td= s.profile.user.full_name
       %td= link_to 'Remove', s, :method => :delete
