styled profile page buttons

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -64,6 +64,13 @@
   padding: 0px;
 }
 
+.profile-button {
+  width: 123px;
+  margin: 3px 0px;
+  float: right;
+  margin-right: -18px;
+}
+
 // New message styling
 
 .photo-sizing-message {
