--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -16,14 +16,14 @@
       .col-md-10
         %h3.remove-top-margin
           = @profile.user.full_name
-      .col-md-1
+      .col-md-2
         - if can? :update, @profile
-          = button_to("Edit Profile", edit_current_user_profile_path, :class => "btn btn-default", :method => :get)
+          = button_to("Edit Profile", edit_current_user_profile_path, :class => "btn btn-default profile-button", :method => :get)
         - if current_user != @profile.user
           - if can? :create, Message
-            = button_to("Message me", new_user_message_path(@user), :class => "btn btn-default", :method => :get)
+            = button_to("Message me", new_user_message_path(@user), :class => "btn btn-default profile-button", :method => :get)
         - if current_user != @profile.user && current_user.saved_profiles.where(profile_id: @profile.id).length == 0
-          = button_to("Save this profile", user_saved_profiles_path(@user), :class => "btn btn-default", :method => :post)
+          = button_to("Save this profile", user_saved_profiles_path(@user), :class => "btn btn-default profile-button", :method => :post)
     .row
       %b Location:
       = @profile.city
