--- a/app/views/profiles/views.html.haml
+++ b/app/views/profiles/views.html.haml
@@ -1,4 +1,14 @@
-- @views.each do |view|
-  %p= view.viewer.full_name
-  %p= time_ago_in_words view.created_at
-  %hr
+%h1 Profile views
+
+%table.table.table-hover
+
+  - @views.each do |view|
+    %tr
+      %td
+        = link_to image_tag(view.viewer.image.thumb.url), show_user_profile_path(view.viewer)
+      %td
+        = view.viewer.full_name
+        viewed your profile
+      %td 
+        = time_ago_in_words view.created_at
+        %hr
